Feature/user integration (#44)
* init commit;

# Conflicts:
#	src/api/user.js
#	src/layout/components/navbar/index.vue
#	src/utils/request.js
#	src/views/user/components/UserDetail.vue

* config login & logout;

* minor update;

* apply lint fix after commit

* fix the page sidebar and title render bug;

* add All Permissions switch for dev-mode(true);

* implement token refresh feature;

* fix logged in user pinia persistent;

* minior update'

* Department CRUD, Shift CRUD, Support certificate for user, other adjustments for api

* Bugfix on department/team/user

* Department update, change role option to depend on department in user form. Some minor update

* UserForm formatting. UserDetail minor fix. Enable/Disable/Delete api update in user table. Change certificate number to be required in certificate form.

* Add custom field reset after submit in user form. Team related dto field update. Minor reformat in certificate form

* Add role info in user selection in team form

* Added confirmation for self user status deactivation, removed status field in user form, added blur handling on vue-tel-input, minor user form layout update

* Adjust aspect ratio of work order calendar. Added searching on department/user/role/location/equipment count hover. Bugfix on external user update not handled in user management. Bugfix on no reload after creating user and click outside dialog. Update development environment url for user backend

* Minor code auto formatting

* Bug fix on loading department data in edit team form

* Minor display bug, code auto formatting, incorrect translation key

---------

Co-authored-by: Eric11-dev <61522097+Eric11-dev@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <script>
+      (function () {
+        // 只在 Cognito 回调路径且还没有 hash 时重写为 hash 路由
+        var p = window.location.pathname;
+        if ((p === '/callback' || p === '/callback/') && !window.location.hash) {
+          var newUrl = window.location.origin + '/#' + p + window.location.search;
+          window.location.replace(newUrl); // 不留历史记录，避免回退循环
+        }
+      })();
+    </script>
     <link rel="icon" href="/fpsicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Loading MES Maintenance</title>
